# superdocs

./: README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
backend/: .env  .gitignore  bun.lockb  diff.ts  index.ts  main.py  package-lock.json  package.json  prompts.py  prompts.ts  tsconfig.json
backend/api/: hello.ts  index.ts  recommend_prompts.ts
backend/app/: index.ts  prompts.ts
backend/utils/: diff.ts  prompts.ts
bun_backend/: index.ts  package-lock.json  package.json
extension/: .gitignore  CHANGELOG.md  README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo
extension/src/: extension.ts
extension/webview/: config-overrides.js  package.json
local-server/: ServerTest.ipynb  diff_utils.py  server.py
modal-server/: app.py  test_app.py  test_modal.py
server/: proxy.py  test.py  test_groq.py  test_node.js
src/: extension.ts  tsconfig.json
src/agent/: web_streaming_callback.ts
superdocs/: .gitignore  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
superdocs/python/: .flaskenv  README.md  agent.py  diff_management.py  documentation_loader.py  embedded_repo.py  github_load.py  langchain_repo.py  main.py  main_autogen.py  replace_text_tool.py  repo.py  repomap_tool.py  request_schemas.py  requirements.txt  response_stream_callback.py  run_autogen.py  saved_variable.py  search_and_replace.py  search_retrieval.py  setup.py  string_input.py  test_std.py  tools.py  web_load.py  (+1 more)
superdocs/python/cli/: README.md  pyproject.toml
superdocs/python/cli/cli/: diff_management.py  main.py
webview/: package.json
(+41 files in other folders)
