[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["Vijay Daita <vijay@longlaketech.com>"]
readme = "README.md"

[tool.poetry.scripts]
superdocs = "cli.main:typer_app"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-cors = "^4.0.0"
gitpython = "^3.1.37"
googlesearch-python = "^1.2.3"
langchain = "^0.0.352"
openai = "^1.6.0"
pydantic = "^1.10.13"
python-dotenv = "^1.0.0"
ripgrepy = "^2.0.0"
thefuzz = "^0.20.0"
tiktoken = "^0.4.0"
trafilatura = "^1.6.1"
typer = {extras = ["all"], version = "^0.9.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
